--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>Pokemon Teams</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="./src/api.js"></script>
+    <script defer src="./src/index.js"></script>
   </head>
   <body>
     <header>
-      <h2>Pokemon Teams!</h2>
+      <h2>Pokemon Teams</h2>
     </header>
-
+    <section id="messageBanner" class="hidden"></section>
     <main>
       <!-- Add our Pokemon -->
     </main>
-
-    <script src="./src/index.js"></script>
   </body>
 </html>
